--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
 }
 .div-content {
   border: 1px solid #cecece;
