--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
 <div class="flex-row">
   <div class="div-content">
+    <div>Fine Young Canibal</div>
     <div class="title">Welcome bro..</div>
   </div>
 </div>
