--- a/src/app.html
+++ b/src/app.html
@@ -7,12 +7,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<link rel="stylesheet" href="/bulma.css">
+	<link rel="stylesheet" href="./mystyle.css">
+	<script src="https://kit.fontawesome.com/8db36c25bb.js" crossorigin="anonymous"></script>
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div id="fb-root"></div>
-	<div style="display: contents">%sveltekit.body%</div>
+	<div id="app" style="display: contents">%sveltekit.body%</div>
 
 	<script>
 
