--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en" class="dark has-navbar-fixed-top">
 
 <head>
 	<meta charset="utf-8" />
