--- a/src/app.html
+++ b/src/app.html
@@ -12,9 +12,9 @@
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div id="fb-root"></div>
+	<!-- <div id="fb-root"></div> -->
 	<div id="app" style="display: contents">%sveltekit.body%</div>
-
+<!-- 
 	<script>
 
 		function statusChangeCallback(response) {  // Called with the results from FB.getLoginStatus().
@@ -74,7 +74,7 @@
 	<script async defer crossorigin="anonymous"
 		src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v17.0&appId=1284186342222033&autoLogAppEvents=1"
 		nonce="ObQqMIS0">
-	</script>
+	</script> -->
 
 </body>
 
