--- a/src/app.html
+++ b/src/app.html
@@ -70,11 +70,11 @@
   }
 
 	</script>
-
+-->
 	<script async defer crossorigin="anonymous"
-		src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v17.0&appId=1284186342222033&autoLogAppEvents=1"
+		src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0&appId=1284186342222033&autoLogAppEvents=1"
 		nonce="ObQqMIS0">
-	</script> -->
+	</script> 
 
 </body>
 
